--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
         android:allowBackup="true"
@@ -36,6 +38,8 @@
             android:exported="true" />
         <activity android:name=".ItemDetailsActivity"
             android:exported="true" />
+        <activity android:name=".RecipeDisplayActivity" />
+
         <activity
             android:name=".SplashScreenActivity"
             android:exported="true">
